[package]
name = "cggmp-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Webassembly bindings to CGGMP multi-party-ecdsa"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#mpc-ecdsa-getrandom-hack = {path = "../../getrandom", version = "*"}
mpc-ecdsa-getrandom-hack = {version = "*"}
getrandom = {version = "0.1.16", features = ["wasm-bindgen"]}
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-rayon = "1.0"
rand = { version="0.6.5", features = ["wasm-bindgen"] }
#rand = { version="0.7.3", features = ["getrandom"] }
console_error_panic_hook = "0.1.6"
sha3 = "0.10"
serde = {version = "1", features = ["derive"]}
hex = "0.4"
round-based = "0.1.4"
log = "0.4"
wasm-log = "0.3"

[dependencies.cggmp-threshold-ecdsa]
#git = "https://github.com/webb-tools/cggmp-threshold-ecdsa.git"
git = "https://github.com/tmpfs/cggmp-threshold-ecdsa.git"
branch = "deps-update"
#path = "../forks/cggmp-threshold-ecdsa"
default-features = false

[dependencies.curv-kzen]
#git = "https://github.com/ZenGo-X/curv"
#path = "../forks/curv"
version = "0.10"
features = ["num-bigint"]
default-features = false

[dependencies.paillier]
version = "0.4.3"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
#git = "https://github.com/webb-tools/multi-party-ecdsa"
#path = "../forks/multi-party-ecdsa"
git = "https://github.com/tmpfs/multi-party-ecdsa"
branch = "deps-update"
default-features = false
version = "*"

[patch.crates-io]
#curv-kzen = { path = "../forks/curv" }
curv-kzen = { git= "https://github.com/tmpfs/curv", branch = "disable-default-features" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
